--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,27 +1,6 @@
-name: Check Subtitles
-
-on:
-  schedule:
-    - cron: "0 18 * * *"  # 1h sáng giờ Hà Nội (GMT+7)
-  workflow_dispatch:
-
-jobs:
-  check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
-      - name: Install dependencies
-        run: pip install requests beautifulsoup4
-
-      - name: Run subtitle checker
+- name: Run subtitle checker
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
+          BROWSERLESS_TOKEN: ${{ secrets.BROWSERLESS_TOKEN }}
         run: python check_subs.py
