--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,29 @@
-- name: Run subtitle checker
+name: Subtitle Notifier
+
+on:
+  schedule:
+    - cron: '0 18 * * *'   # Chạy lúc 1h sáng hàng ngày (giờ Hà Nội = UTC+7)
+  workflow_dispatch:        # Cho phép chạy thủ công khi anh bấm "Run workflow"
+
+jobs:
+  check_subs:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4
+
+      - name: Run subtitle checker
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
